--- a/html/index.html
+++ b/html/index.html
@@ -57,7 +57,38 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h1 id="index">INDEX</h1>
+          <p>lot Technical Pack</p>
+<h2 id="stats-echo">Stats: Echo</h2>
+<p>The BBC&#39;s stats library is available documented here <a href="http://bbc.github.io/echo-docs/">http://bbc.github.io/echo-docs/</a>
+You will be provided with counter names to use, there will be of the form</p>
+<pre><code>corporate.connectedstudio.&lt;pilotname&gt;.&lt;page identifiers&gt;.page
+</code></pre><p>You will also need to add a label if the pilot is being tested in Taster, this will be of the form </p>
+<pre><code>tasterpilot=&lt;pilot name&gt;
+</code></pre><h2 id="legal-links">Legal Links</h2>
+<p>If the pilot is going to presented outside the Taster frame you will need to add links (usually at the bottom) to BBC T&amp;C documents. Something similar to the html fragment below.</p>
+<pre><code>&lt;a href=&quot;http://www.bbc.co.uk/privacy/information
+/policy/&quot;target=&quot;_blank&quot;&gt;Privacy policy&lt;/a&gt; | 
+&lt;a href=&quot;http://www.bbc.co.uk/terms&quot; 
+target=&quot;_blank&quot;&gt;Terms and conditions&lt;/a&gt;
+</code></pre><h2 id="cookie-warning">Cookie Warning</h2>
+<p>If your site makes any use of cookies(including using the stats package above) you will have to add a cookie warning.  This needs to be prominent on the users first visit to the site but can then disappear.</p>
+<pre><code>&lt;div id=&quot;cookie-warning&quot;&gt;&lt;h2&gt;Cookies on this BBC
+ website&lt;/h2&gt;&lt;p&gt;We use cookies to ensure you get the 
+ best website experience. If you continue without
+ changing your settings, we&#39;ll assume that you are
+ happy to receive all cookies on this website. 
+ However you can change your cookie settings at 
+ any time.&lt;/p&gt;
+&lt;a href=&quot;http://policy.pilots.bbcconnectedstudio
+.co.uk/cookies.html&quot; target=&quot;_blank&quot;&gt;
+Find out more&lt;/a&gt;&lt;/div&gt;
+</code></pre><p>As part of your technical review we will be looking at cookie usage to check whether a more specific warning is required.</p>
+<h2 id="taster-integration">Taster Integration</h2>
+<p>Please see Taster Tenants Integration pages</p>
+<h2 id="technical-review">Technical review</h2>
+<p>All pilots must be reviewed by one of the BBC&#39;s technical team prior to appearing in Taster.  The important factors to consider are related to scalability and security.</p>
+<h2 id="information-security">Information Security</h2>
+<p>Many pilots will require checking by the BBC&#39;s Information Security team.  This involves filling in two forms, one describes how the application works and the steps taken to secure it, the other is a checklist of the top 25 security issues.  If this is needed the developer will be given access to the BBC&#39;s systems to allow them to complete these forms and discuss them with the InfoSec team.# INDEX</p>
 
           <hr/>
           <h2><i class="fa fa-comments"></i> Questions and Feedback</h2>
