--- a/html/index.html
+++ b/html/index.html
@@ -57,7 +57,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <p>lot Technical Pack</p>
+          <h1 id="pilot-technical-pack">Pilot Technical Pack</h1>
 <h2 id="stats-echo">Stats: Echo</h2>
 <p>The BBC&#39;s stats library is available documented here <a href="http://bbc.github.io/echo-docs/">http://bbc.github.io/echo-docs/</a>
 You will be provided with counter names to use, there will be of the form</p>
